--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,30 +1,3 @@
-/* html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
-    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-} */
-
 :root {
   --fc-button-active-bg-color: var(--mantine-primary-color-filled);
   --fc-button-active-border-color: var(--mantine-primary-color-filled);
@@ -48,6 +21,17 @@ a {
 
 .fc table {
   font-size: 0.9rem;
+}
+
+.fc .fc-bg-event {
+  background: repeating-linear-gradient(
+    45deg,
+    #cccccc 0px,
+    #cccccc 10px,
+    #f0f0f0 10px,
+    #f0f0f0 20px
+  );
+  opacity: 0.8;
 }
 
 /* .fc .fc-timegrid-slot {
@@ -80,4 +64,7 @@ a {
   }
 }
 
-/* font-size: var(--button-fz, var(--mantine-font-size-sm)); */
+.mrt-table-pagination p,
+#rpp-label {
+  font-size: var(--mantine-font-size-sm);
+}
